# ign-modelphotoshoot

./: CMakeLists.txt  ModelPhotoShoot.cc  ModelPhotoShoot.hh  README.md  model_photo_shoot.sdf
